--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinite Mind</title>
+
+    <style>
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+
+            /* Prevent document pinch-zoom & touch-hold-to-highlight */
+            touch-action: none;
+
+            -webkit-touch-callout: none;
+            /* iOS Safari */
+            -webkit-user-select: none;
+            /* Safari */
+            -khtml-user-select: none;
+            /* Konqueror HTML */
+            -moz-user-select: none;
+            /* Old versions of Firefox */
+            -ms-user-select: none;
+            /* Internet Explorer/Edge */
+            user-select: none;
+            /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+        
+            overflow: hidden;
+        }
+
+        canvas {
+            image-rendering: pixelated;
+            border: 1px solid red;
+        }
+    </style>
+
 </head>
 <body>
-    
+    <canvas id="canvas">Your browser does not support HTML5 canvas</canvas>
 </body>
-<script src="./dist/client.js"></script>
+<script src="./dist/bundle.js"></script>
 </html>
